# TWSE-UDP-Resolver

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  analyzing_pcap.py  setup.py
example/: parquet_generator.py  twse_udp_resolver_cpp_interface.cpp  twse_udp_resolver_python_interface.py
include/: logger.h  parser.h
src/: cpp_interface.cpp  main.cpp  parser.cc  pybind.cpp
test/: TWSE_mocker.py  test.sh
